# mini_order_booking

./: Dockerfile  Execution_guide  README.md  docker-compose.yaml  main.py  orders.db  pyproject.toml  run.py
app/api/: auth.py  deps.py  orders.py  products.py
app/core/: security.py
app/db/: database.py
app/models/: order.py  product.py  user.py
app/schemas/: order.py  product.py
app/services/: order_service.py
